Ensure all inputs with basic style look alike on firefox

--- a/reahl-web/reahl/web/static/css/basic.css
+++ b/reahl-web/reahl/web/static/css/basic.css
@@ -51,6 +51,7 @@ p.feedback { font-size: 85%; }
 /* -- inputs -- */
 [required]:before { content: "*" }
 [required] { background: #fefeeb; }
+input { background: #fbfbf2; }
 input.error { background: red; }
 label.error { 
   display: block; 
